@@ -2033,20 +2033,26 @@ void registerSeekCallback(ConsumerSeekCallback callback);
 
 void onPartitionsAssigned(Map<TopicPartition, Long> assignments, ConsumerSeekCallback callback);
 
+void onPartitionsRevoked(Collection<TopicPartition> partitions)
+
 void onIdleContainer(Map<TopicPartition, Long> assignments, ConsumerSeekCallback callback);
 ----
 ====
 
-The first method is called when the container is started.
+The `registerSeekCallback` is called when the container is started and whenever partitions are assigned.
 You should use this callback when seeking at some arbitrary time after initialization.
 You should save a reference to the callback.
 If you use the same listener in multiple containers (or in a `ConcurrentMessageListenerContainer`), you should store the callback in a `ThreadLocal` or some other structure keyed by the listener `Thread`.
 
-When using group management, the second method is called when assignments change.
+When using group management, `onPartitionsAssigned` is called when partitions are assigned.
 You can use this method, for example, for setting initial offsets for the partitions, by calling the callback.
+You can also use this method to associate this thread's callback with the assigned partitions (see the example below).
 You must use the callback argument, not the one passed into `registerSeekCallback`.
 This method is never called if you explicitly assign partitions yourself.
 Use the `TopicPartitionOffset` in that case.
+
+`onPartitionsRevoked` is called when the container is stopped or Kafka revokes assignments.
+You should discard this thread's callback and remove any associations to the revoked partitions.
 
 The callback has the following methods:
 
@@ -2118,23 +2124,27 @@ public class SeekExampleApplication {
 @Component
 class Listener implements ConsumerSeekAware {
 
-
     private static final Logger logger = LoggerFactory.getLogger(Listener.class);
 
+    private final ThreadLocal<ConsumerSeekCallback> callbackForThread = new ThreadLocal<>();
 
     private final Map<TopicPartition, ConsumerSeekCallback> callbacks = new ConcurrentHashMap<>();
 
-    private static final ThreadLocal<ConsumerSeekCallback> callbackForThread = new ThreadLocal<>();
-
     @Override
     public void registerSeekCallback(ConsumerSeekCallback callback) {
-        callbackForThread.set(callback);
+        this.callbackForThread.set(callback);
     }
 
     @Override
     public void onPartitionsAssigned(Map<TopicPartition, Long> assignments, ConsumerSeekCallback callback) {
-        assignments.keySet().forEach(tp -> this.callbacks.put(tp, callbackForThread.get()));
+        assignments.keySet().forEach(tp -> this.callbacks.put(tp, this.callbackForThread.get()));
     }
+
+    @Override
+	public void onPartitionsRevoked(Collection<TopicPartition> partitions) {
+		partitions.forEach(tp -> this.callbacks.remove(tp));
+		this.callbackForThread.remove();
+	}
 
     @Override
     public void onIdleContainer(Map<TopicPartition, Long> assignments, ConsumerSeekCallback callback) {
@@ -2147,6 +2157,48 @@ class Listener implements ConsumerSeekAware {
 
     public void seekToStart() {
         this.callbacks.forEach((tp, callback) -> callback.seekToBeginning(tp.topic(), tp.partition()));
+    }
+
+}
+----
+====
+
+To make things simpler, version 2.3 added the `AbstractConsumerSeekAware` class, which keeps track of which callback is to be used for a topic/partition.
+The following example shows how to seek to the last record processed, in each partition, each time the container goes idle.
+It also has methods that allow arbitrary external calls to rewind partitions by one record.
+
+====
+[source, java]
+----
+public class SeekToLastOnIdleListener extends AbstractConsumerSeekAware {
+
+    @KafkaListener(id = "seekOnIdle", topics = "seekOnIdle")
+    public void listen(String in) {
+        ...
+    }
+
+    @Override
+    public void onIdleContainer(Map<org.apache.kafka.common.TopicPartition, Long> assignments,
+            ConsumerSeekCallback callback) {
+
+            assignments.keySet().forEach(tp -> callback.seekRelative(tp.topic(), tp.partition(), -1, true));
+    }
+
+    /**
+    * Rewind all partitions one record.
+    */
+    public void rewindAllOneRecord() {
+        getSeekCallbacks()
+            .forEach((tp, callback) ->
+                callback.seekRelative(tp.topic(), tp.partition(), -1, true));
+    }
+
+    /**
+    * Rewind one partition one record.
+    */
+    public void rewindOnePartitionOneRecord(String topic, int partition) {
+        getSeekCallbackFor(new org.apache.kafka.common.TopicPartition(topic, partition))
+            .seekRelative(topic, partition, -1, true);
     }
 
 }
